app/global/static/flaskcon.css
.form-error {
    color: red;
    font-size: 1.4rem;
}

.flash-message {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 1rem;
    background-color: rgba(56, 168, 190, 1);
    color: #fff;
    text-align: center;
    font-size: 1.8rem;
    z-index: 9999;
    cursor: pointer;
}

.flash-message-item {
    margin: 1rem;
}

.auth-fc-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.auth-fc-container img {
    padding-top: 2rem;
    padding-bottom: 1.5rem;
    text-align: center;
}

.auth {
    width: 100%;
    max-width: 400px;
    background-color: rgba(255, 255, 255, 0.80);
    border-radius: 1rem;
    margin-top: 1rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: stretch;
    padding: 1.5rem;
}

.auth form {
    display: flex;
    flex-direction: column;

}

.auth form input {
    margin-bottom: 1rem;
}

.auth form button {
    margin-bottom: 1rem;
}

.fc-container-errors {
    display: flex;
    flex-direction: column;
    justify-items: center;
    align-items: center;
}

.fc-container-errors img {
    padding: 4rem 0;
}

.fc-container-errors h2 {
    text-align: center;
}

.fc-container-errors p {
    text-align: center;
}

.fc-header {
    background-color: rgba(255, 255, 255, 0.95);
    position: fixed;
    width: 100%;
    z-index: 99;
}

.breadcrumbs {
    font-size: 1rem;
    padding-bottom: 1rem;
    padding-left: 1rem;
}

.fc-container {
    display: flex;
    flex-direction: row;
    padding-top: 80px;
}

.fc-container > aside {
    background-color: rgba(255, 255, 255, 0.95);
    border-right: 1px solid rgba(229, 229, 229, 0.5);
    height: 100vh;
    z-index: 9;
    position: fixed;
    overflow-y: auto;
}

.backend-menu-hide {
    margin-left: -290px;
}

.backend-menu-show {
    margin-left: 0;
}

.dummy-side-nav {
    display: none;
    width: 250px;
    padding: 0 2rem;
}

.side-nav {
    display: block;
    width: 250px;
    padding: 2rem 2rem 3rem 2rem;
    text-align: center;
}

.side-nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    gap: 0.8rem;
}

.side-nav li {
    text-align: center;
}

.side-nav li a {
    display: block;
    text-decoration: none;
    background-color: rgba(255, 255, 255, 0.70);
    border: 1px solid rgba(229, 229, 229, 0.5);
    padding: 0.8rem;
    margin: 0 0.8rem;
    border-radius: 8px;
    color: #1e1e1e;
}

.side-nav li a:hover {
    background-color: rgba(56, 168, 190, 0.1);
}

.side-nav .selected {
    background-color: rgba(56, 168, 190, 0.1);
}

.side-nav-selected {
    background-color: rgba(56, 168, 190, 0.1);
}

.product-info {
    display: flex;
    flex-direction: column;
    border-top: 1px solid rgba(229, 229, 229, 0.5);
    margin-top: 2rem;
    padding: 2rem;
}

.product-info img {
    width: 100px;
}

.accountlet {
    padding: 4rem 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.accountlet p {
    font-weight: bold;
    font-size: 1.6rem;
    margin-bottom: 1rem;
}

.accountlet img {
    width: 150px;
    height: 150px;
    border-radius: 50%;
    margin-bottom: 1rem;
    border: 2px solid rgb(0, 211, 255) !important;
}

.top-nav {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    min-height: 80px;
}

.top-nav div {
    padding: 0 1rem;
}

.center-content {
    max-width: 1400px;
    padding: 0.5rem 1rem;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.content {
    flex: 1;
    margin: 2rem;
}

.content-box {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    background-color: rgba(255, 255, 255, 0.80);
    border-radius: 8px;
    padding: 2rem;
}

.auth-content-box input, textarea {
    width: 100%;
}

.form-buttons {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    gap: 1rem;
}

.warning {
    background-color: rgba(255, 0, 0, 0.05);
    border-radius: 8px;
    padding: 2rem;
    font-weight: bold;
}

.note {
    background-color: rgba(12, 12, 12, 0.05);
    border-radius: 8px;
    padding: 2rem;
    font-weight: bold;
}

.attention-content {
    background-color: rgba(203, 203, 203, 0.05);
    border: 1px solid rgba(30, 30, 30, 0.1);
    border-radius: 8px;
    padding: 2rem;
    margin-bottom: 1rem;
}

.attention-content button {
    margin-bottom: 0;
}

.attention-content p {
    margin: 0;
}

.warning p {
    margin: 0;
}

.display-picture-choice {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: start;
    align-items: center;
    gap: 2rem;
}

.display-picture-choice-img {
    width: 150px;
    height: 150px;
    border-radius: 50%;
    border: 8px solid rgba(255, 255, 255, 0);
    cursor: pointer;
}

.display-picture-choice-img:hover {
    border: 8px solid rgba(0, 211, 255, 0.2);
}

.display-picture-selected {
    border: 8px solid rgb(0, 211, 255) !important;
}

.display-picture-box {
    background-color: rgba(12, 12, 12, 0.05);
    border-radius: 8px;
    padding: 2rem;
    font-weight: bold;
    display: flex;
    flex-direction: column;
    max-width: 170px;
    text-align: center;
    gap: 1rem;
    align-items: center;
    border: 1px solid rgba(0, 211, 255, 0) !important;
}

.display-picture-box:hover {
    border: 1px solid rgb(0, 211, 255) !important;
}

.display-picture-box-selected {
    border: 1px solid rgb(0, 211, 255) !important;
}

.roles-choice {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: start;
    align-items: center;
    gap: 2rem;

}

.roles-choice p {
    margin: 0;
    font-weight: bold;
}

.role-choice {
    border: 1px solid rgba(12, 12, 12, 0.05);
    background-color: rgba(12, 12, 12, 0.05);
    border-radius: 8px;
    padding: 0.5rem 1.5rem;
    cursor: pointer;
}

.role-choice:hover {
    border: 1px solid rgba(0, 223, 255, 0.5);
    border-radius: 8px;
    cursor: pointer;
}

.role-choice-clear {
    border: 1px solid rgba(255, 0, 0, 0.05);
    background-color: rgba(255, 0, 0, 0.05);
    border-radius: 8px;
    padding: 0.5rem 1.5rem;
    cursor: pointer;
}

.role-choice-clear:hover {
    border: 1px solid rgba(255, 0, 0, 0.2);
    border-radius: 8px;
    cursor: pointer;
}

.role-choice-selected {
    background-color: rgba(0, 225, 255, 0.5);
    border-radius: 8px;
    padding: 0.5rem 1.5rem;
    cursor: pointer;
}

.account-enable-disable {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 1rem;
}

.account-status {
    border-radius: 8px;
    padding: 0.5rem 1.5rem;
    text-transform: uppercase;
    color: #fff;
    font-weight: bold;
    text-align: center;
}

.account-enabled {
    background-color: rgba(16, 128, 0, 0.9);
}

.account-disabled {
    background-color: rgba(128, 0, 0, 0.9);
}

.vote-for {
    display: inline-block;
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: rgba(33, 255, 0, 0.8);
}

.vote-against {
    display: inline-block;
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: rgba(255, 0, 0, 0.8);
}

.vote-abstained {
    display: inline-block;
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: rgba(255, 210, 0, 0.8);
}

.top-stats {
    display: flex;
    flex-direction: row;
    gap: 1rem;
    padding-bottom: 1rem;
    flex-wrap: wrap;
}

.top-stats div {
    border: rgba(0, 0, 0, 0.05) 1px solid;
    border-radius: 8px;
    background: rgba(0, 0, 0, 0.01);
    display: inline-block;
    font-size: 1.2rem;
    padding: 0.5rem 1rem;
}

.dashboard-status-box {
    background-color: rgba(203, 203, 203, 0.05);
    border: 1px solid rgba(30, 30, 30, 0.1);
    border-radius: 8px;
    padding: 2rem;
    margin: 0.5rem;
    text-align: center;
}

.dashboard-status-box h1 {
    font-size: 2rem;
    font-weight: bold;
    margin: 0;
}

.dashboard-status-box h2 {
    font-size: 4rem;
    margin: 0;
}

.top-buttons {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 0.5rem;
}

.disabled {
    opacity: 0.5;
}

.rotate_90 {
    display: inline-block;
    transform: rotate(90deg);
}

/* Larger than mobile */
@media (min-width: 400px) {
}

/* Larger than phablet (also point when grid becomes active) */
@media (min-width: 550px) {
}

/* Larger than tablet */
@media (min-width: 850px) {

}

/* Larger than desktop */
@media (min-width: 1000px) {
    .top-buttons {
        display: flex;
        flex-direction: row;
        justify-content: start;
        align-items: center;
    }

    .dummy-side-nav {
        display: block;
    }
}

/* Larger than Desktop HD */
@media (min-width: 1200px) {
}

